--- a/style.2.css
+++ b/style.2.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 12pt;
     max-width: 100%;
+    padding: 30px;
 }
 
 .fluid_container {
