--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,8 @@ h4 {
 .subtitle {
     font-size: 1em;
     font-family: 'Raleway', 'sans-serif';
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 h1.title {
